--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
         <span>Reports</span>
       </a>
       <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-        <a class="dropdown-item" href="view_report.html">View Users</a>
+        <a class="dropdown-item" href="formulation.html">View Formulation</a>
+        <a class="dropdown-item" href="raw_material.html">View Raw Material</a>
     </div>
     </li>
    </ul>
