--- a/formulation.html
+++ b/formulation.html
@@ -179,21 +179,123 @@
                                                   
                                                       <tr>
                                                           <td>premix poultry 1%</td>
-                                                          <td></td>
-                                                          <td></td>   
-                                                          <td></td>   
-                                                          <td></td>   
-                                                          <td></td>   
-                                                          <td></td>   
-                                                          <td></td>   
-                                                          <td></td>   
-                                                          <td></td>   
-                                                          <td></td>   
-                                                          <td></td>   
-                                                          <td></td>   
-                                                          <td></td>   
-                                                          <td></td>
+                                                          <td>1.00%</td>
+                                                          <td>€ 20.00</td>   
+                                                          <td>10</td>   
+                                                          <td>1%</td>   
+                                                          <td>30</td>   
+                                                          <td>0.00</td>   
+                                                          <td>0.00</td>   
+                                                          <td>0.00</td>   
+                                                          <td>0.00</td>   
+                                                          <td>0.00</td>   
+                                                          <td>0.00</td>   
+                                                          <td>0.00</td>   
+                                                          <td>1.00%</td>   
+                                                          <td>1.00%</td>
                                                           </tr>
+                                                        <tr>
+                                                            <td>salt</td>
+                                                            <td>0.15%</td>
+                                                            <td>€ 0.18</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.15</td>   
+                                                            <td>0.30</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>limestone</td>
+                                                            <td>0.75%</td>
+                                                            <td>€ 0.60</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.15</td>   
+                                                            <td>0.30</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>blood meal</td>
+                                                            <td>2.00%</td>
+                                                            <td>€ 0.18</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.15</td>   
+                                                            <td>0.30</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>wheat</td>
+                                                            <td>17%</td>
+                                                            <td>€ 0.18</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.15</td>   
+                                                            <td>0.30</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>maize</td>
+                                                            <td>40.00%</td>
+                                                            <td>€ 0.18</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.92</td>   
+                                                            <td>0.64</td>   
+                                                            <td>0.02</td>   
+                                                            <td>0.02</td>   
+                                                            <td>0.00%</td>   
+                                                            <td>40.00%</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>sunflower meal,oil 5-20%non dehulled</td>
+                                                            <td>5.00%</td>
+                                                            <td>€ 14.0</td>   
+                                                            <td>0.02</td>   
+                                                            <td>0.01</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.00</td>   
+                                                            <td>0.92</td>   
+                                                            <td>0.45</td>   
+                                                            <td>0.02</td>   
+                                                            <td>0.01</td>   
+                                                            <td>0.00%</td>   
+                                                            <td>5.00%</td>
+                                                        </tr>
                                                   </tbody>
                                                   
                                               </table>
