--- a/admin/index.html
+++ b/admin/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>AGRI - DEVLINKS LTD</title>
+  <title>Admin Dashboard - AGRI DEVLINKS</title>
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 
