--- a/user_calendar.html
+++ b/user_calendar.html
@@ -21,7 +21,7 @@
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/themes/base/jquery-ui.css" rel="stylesheet" />
     <link href="vendor/fullcalendar/fullcalendar.min.css" rel="stylesheet">
     
-    <link rel="shortcut icon" type="image/x-icon" href="images/logo.png">
+    <link rel="shortcut icon" type="image/x-icon" href="image/logo.png">
 
     <style>
         :root {
